add bib referecnes

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -205,6 +205,23 @@
   groups = {biblio\_pseudo\_alex}
 }
 
-@comment{jabref-meta: databaseType:bibtex;}
-@comment{jabref-meta: groupstree:
- 0 AllEntriesGroup:;
+@article{Nicolas1980a,
+  volume = {72},
+  number = {1},
+  journal = {The Journal of Chemical Physics},
+  author = {Nicolas, G. and Durand, Ph},
+  year = {1980},
+  pages = {453--463}
+}
+
+@article{katsuki_spectral_1993,
+  volume = {98},
+  language = {en},
+  number = {1},
+  journal = {The Journal of Chemical Physics},
+  author = {Katsuki, Shinichi},
+  year = {1993},
+  pages = {496--501}
+}
+
+
