--- a/main.tex
+++ b/main.tex
@@ -167,7 +167,7 @@ are reproduced by a mono-electronic operator.\cite{carissan_what_2006}
 However, while effective core potentials and model potentials intend to 
 reproduce atomic properties,
 effective group potentials aim at mimicking the effect of atoms involved in one or more chemical
-bonds. The cyclopentadienyl group has, for instance, been successfully extracted.
+bonds. The cyclopentadienyl group has, for instance, been successfully extracted.\cite{carissan_what_2006}
 In this example, the active part consisted of six electrons (the $\pi$ electrons) and six
 nuclear charges, with the pseudo-potential replacing all the rest, including the hydrogen atoms.
 Even if the $\sigma / \pi$ separability suggested how to define the active and the inactive parts,
@@ -175,7 +175,8 @@ carbon atoms are hybridized and the core/valence distinction is not
 strictly defined.
 
 The theoretical background to extract effective group pseudo-potentials  can be traced back 
-to several contributions in the 80's and 90's. In 1985 Katsuki built molecular potentials based on Huzinaga's model potentials.
+to several contributions in the 80's and  90's.\cite{Nicolas1980a, huzinaga_effective_1991, huzinaga_1994_1995}
+In 1992 Katsuki built molecular potentials based on Huzinaga's model potentials.\cite{katsuki_molecular_1992,katsuki_spectral_1993}
  In his work on this subject, Huzinaga emphasises that pseudo-potentials should maintain three effects of the
 'dormant' electrons on the active ones: the Coulomb, the exchange and the 'no-collapse' term.\cite{huzinaga_effective_1991}
 Following his proposal, for an atom where active and dormant electrons have been separated, the Hamiltonian reads:
