--- a/main.tex
+++ b/main.tex
@@ -461,7 +461,8 @@ The next step adds a \(p\)-potential centred on the pseudo-carbon, with Table \r
 cannot alone describe the relationship between them.
 
 \begin{table}[ht]
-\caption{\(pi\) orbital energy values (eV) for pseudo-thene, using s and p pseudo-potentials. The pseudo-potentials are taken from a pseudo-CH\(^{\bullet}_{3}\) system optimised to give the correct all-electron HOMO energy.}
+\caption{\(\pi\) orbital energy values (eV) for pseudo-ethene, using s and p pseudo-potentials.
+The pseudo-potentials are taken from a pseudo-CH\(^{\bullet}_{3}\) system optimised to give the correct all-electron HOMO energy.}
 \begin{tabular}{c c c c}
 \hline
 & \(p\) coefficient & \(p\) exponent \\
