--- a/main.tex
+++ b/main.tex
@@ -183,7 +183,7 @@ Following his proposal, for an atom where active and dormant electrons have been
 \label{eq:atomicHamiltonian}
 \hat{H} = \sum_{i=1}^n \hat{h}(i) +\sum_{i<j}\frac{1}{r_{ij}}
 \end{equation}
-with $\frac{1}{r_{ij}}$ the bielectronic interaction
+with $\frac{1}{r_{ij}}$ the bi-electronic interaction
 between explicitly treated active electrons and
 the mono-electronic operator:
 \begin{equation}
@@ -218,7 +218,7 @@ In this operator we notice that the \(r^{-1}\) behavior is mantained for the fir
 %\label{eq:atomicHamiltonian}
 %\hat{H} = \sum_{i=1}^n \hat{h}(i) +\sum_{i<j}\frac{1}{r_{ij}}
 %\end{equation}
-%with $\frac{1}{r_{ij}}$ the bielectronic interaction
+%with $\frac{1}{r_{ij}}$ the bi-electronic interaction
 %between explicitly treated active electrons and
 %the mono electronic operator:
 %\begin{equation}
@@ -283,9 +283,9 @@ of each bond.
 Thus, those pseudo-potentials could not be considered as atomic as they were not defined solely
 with respect to the position of the atom they applied to. The previous work should therefore be regarded as a proof-of-concept.
 In this new version, we include more physical meaning in our model, 
-by placing pseudo-potentials that mimic Coulomb interactions among the active and dormant electrons, and the shielded nuclear charge. 
+by placing pseudo-potentials that mimic Coulomb interactions among both the active and dormant electrons, and the shielded nuclear charge. 
 The new pseudo-potentials are fully atomic: the position of the atom
-determines completely where the potentials are put in space in the best possible manner
+determines completely where the potentials are placed in space in the best possible manner
 when dealing with hybridised atoms (as hybridisation destroys isotropy, the preferred orientations
 must be given to define the pseudo-potential).
 
@@ -293,7 +293,7 @@ This article is structured as follows.
 In the first part, the method is defined in detail.
 The second part shows the results obtained, from the most crude to the most refined
 version of the method.
-The extracted pseudopotentials are then employed for extended systems.
+The extracted pseudo-potentials are then employed for extended systems.
 Perspectives are presented in the conclusion.
 
 \section{Method}
@@ -394,7 +394,7 @@ leading us to
 \begin{equation}
 \langle \widehat{Z} \rangle = \langle \psi_{p_{z}} | \widehat{Z} | \psi_{p_{z}} \rangle = \langle \psi_{p_{z}} | Z_{pseudo} | \chi \rangle \langle \chi | \psi_{p_{z}} \rangle = Z_{pseudo} S^{2}
 \end{equation}
-Finally, knowing that our hydrogen-like pseudo-system already contains a charge, \(Z_{nucleus}\), of one we subtract this from the desired \(Z_{eff}\) we want to influence our \(p_{z}\) electron, leaving us with
+Finally, knowing that our hydrogen-like pseudo-system already contains a charge, \(Z_{nucleus}=1\), which we subtract from the desired \(Z_{eff}\) with whch we want to influence our \(p_{z}\) electron, leaving us with
 \begin{equation}
 Z_{pseudo} = (Z_{eff} - Z_{nucleus})S^{-2}
 \end{equation}
@@ -460,7 +460,7 @@ The next step adds a \(p\)-potential centred on the pseudo-carbon, with Table \r
 cannot alone describe the relationship between them.
 
 \begin{table}[ht]
-\caption{\(pi\) orbital energy values (eV) for pseudo-thene, using s and p pseudo-potentials. The pseudo-potentials are taken from a pseudo-CH\(^{\bullet}_{3}\) system optimised to give the correct all-electron HOMO energy.}
+\caption{\(\pi\) orbital energy values (eV) for pseudo-thene, using s and p pseudo-potentials. The pseudo-potentials are taken from a pseudo-CH\(^{\bullet}_{3}\) system optimised to give the correct all-electron HOMO energy.}
 \begin{tabular}{c c c c}
 \hline
 & \(p\) coefficient & \(p\) exponent \\
@@ -482,7 +482,7 @@ PBE0 & 3.483 & 1.0 & -10.325 \\
 \end{table}
 
 Having successfully created a pseudo-ethene with the correct HOMO, we attempt to have the pseudo-system replicate other properties of the real system:
-the singlet-triplet excitation energy ($\Delta_{ST}$) in the $\Delta$SCF framework (energy difference between the triplet and the singlet monoreference
+the singlet-triplet excitation energy ($\Delta_{ST}$) in the $\Delta$SCF framework (energy difference between the triplet and the singlet mono-reference
 calculations), the ionisation energy (IE) and the energy of the HOMO orbital ($\varepsilon_{HOMO}$). Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{table:ethene_excitations}. Testing the relevant energies for the optimised pseudo-systems above, we can see from Table \ref{table:ethene_excitations} that the early results are not promising. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" of potential coefficients and exponents around which the correct values begin to emerge. Table \ref{table:ethene_excitations} shows our optimal result, chosen to give HOMO, triplet - singlet and ionisation energies closest to the reference values. 
 
 \begin{table}[ht]
@@ -620,7 +620,7 @@ of the triplet state computed as a single configuration (\emph{i.e.} in a SCF
 framework) increases in both reference and pseudo-potential cases.
 Yet, this effect is strengthened in the pseudo-potential calculations.
 These results suggest that the triplet state cannot be represented as one configuration
-but as a linear combination of monoelectronic excitations as done through TD-DFT.
+but as a linear combination of mono-electronic excitations as done through TD-DFT.
 
 In order to show that the recovering of the agreement between the pseudo-potential
 and the reference calculations is not an artefact, we give in Table~\ref{tab:coef}
@@ -677,20 +677,19 @@ In this work, we tackled the two main problems of the initial version of our
 molecular potentials.
 Firstly, the new pseudo-potentials for sp$^2$ hybridised
 atoms are completely atomic and, even if the directionality of the bonding pattern
-has to be fullfilled by correctly positioning the s potentials, no potentials need to
+has to be fullfilled by correctly positioning the \(s\) potentials, no potentials need to
 be added relative to the position of two atoms.
 Secondly, we gave a physical meaning to all the pseudo-potential
 terms.
 Contrary to our previous attempt, we do not rely on the "no collapse" term,
 which is modeled here by forcing the molecular occupation (\emph{vide infra}).
-We could show that not only were the occupied orbitals well reproduced
+We could show that not only were the occupied orbitals well-reproduced
 by the use of these new potentials, but also that the virtual space is of good quality
 for excited states calculation.
 
 In the framework of this study, there are three logical next steps: the addition of an explicit
 "no collapse" term, the reproduction of the gradient through the parameterisation
 of additional terms, and finally the use of such potentials in the framework
-
 of QM/MM calculations as a replacement of hydrogen based link atoms.
 The first step is needed in order to avoid forcing the molecular orbital occupation and
 to avoid spurious virtual orbitals in the active space.
