--- a/main.tex
+++ b/main.tex
@@ -561,7 +561,8 @@ by the pseudo-systems, and the percentage errors, displayed in Table
 \includegraphics[width=8cm]{ring_pbe0_ionisation}
 \includegraphics[width=8cm]{ring_pbe0_homo}
 \includegraphics[width=8cm]{ring_tddft_excitation}
-\includegraphics[width=5cm]{19_ring_diagram}
+%\includegraphics[width=5cm]{19_ring_diagram}
+\fbox{\includegraphics[width=5cm]{c54h18}}
 \caption{DFT and TD-DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules. 
 C\(_{54}\)H\(_{18}\) is shown in the bottom.}
 \label{fig:rings_graphs}
