--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,9 @@
 \usepackage{amsmath}	    % American Mathematical Society equation formatting
 \graphicspath{ {images/} }     % Path to images
 %TO REMOVE BEFORE SUBMISSION
-\usepackage{lineno} % add the line numbers
-\linenumbers
+\listfiles
+%\usepackage{lineno} % add the line numbers
+%\linenumbers
 %END TO REMOVE BEFORE SUBMISSION
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -735,8 +736,8 @@ publications, refer to the journal's Instructions for Authors.
 
 The following files are available free of charge.
 \begin{itemize}
-  \item Results \& Graphs.ods: Complete results of calculations and associated graphs.
-  \item Calculations folder: Contains all coordinate files used to generate the results in "Results \& Graphs.ods", ordered by molecule
+  \item ResultsandGraphs.ods: Complete results of calculations and associated graphs.
+  \item coordinates folder: Contains all coordinate files used to generate the results in "Results \& Graphs.ods", ordered by molecule
   shape, all-electron/pseudo-molecular calculation and functional/method.
 \end{itemize}
 
