Updated bibliography with titles.

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -4,6 +4,7 @@
   number = {5},
   journal = {Canadian Journal of Chemistry},
   author = {Huzinaga, Sigeru},
+  title = {1994 Polanyi Award Lecture Concept of active electrons in chemistry},
   year = {1995},
   pages = {619--628}
 }
@@ -14,6 +15,7 @@
   number = {1},
   journal = {Chemical Reviews},
   author = {Dolg, Michael and Cao, Xiaoyan},
+  title = {Relativistic Pseudopotentials: Their Development and scope of Applications},
   year = {2012},
   keywords = {density-functional theory,density-functional theory,dirac-hartree-fock,dirac-hartree-fock,effective-core potentials,effective-core potentials,electronic-structure   calculations,electronic-structure calculations,main-group elements,main-group elements,nmr chemical-shifts,nmr chemical-shifts,quantum monte-carlo,quantum monte-carlo,spin-orbit operators,spin-orbit operators,transition-metal atoms,transition-metal atoms,valence basis-sets,valence basis-sets},
   pages = {403--480}
@@ -24,6 +26,7 @@
   number = {1},
   journal = {Journal of Computational Chemistry},
   author = {Drujon, J. and Carissan, Y.},
+  title = {Pseudopotentials for hybridized carbon atoms},
   year = {2013},
   pages = {49--59}
 }
@@ -33,6 +36,7 @@
   number = {12},
   journal = {Chemical Reviews},
   author = {Wesolowski, Tomasz A. and Shedge, Sapana and Zhou, Xiuwen},
+  title = {Frozen-density embedding strategy for multilevel simulations of electronic structure},
   year = {2015},
   pages = {5891--5928}
 }
@@ -42,6 +46,7 @@
   number = {12},
   journal = {Chemical Reviews},
   author = {Chung, Lung Wa and Sameera, W. M. C. and Ramozzi, Romain and Page, Alister J. and Hatanaka, Miho and Petrova, Galina P. and Harris, Travis V. and Li, Xin and Ke, Zhuofeng and Liu, Fengyi and Li, Hai-Bei and Ding, Lina and Morokuma, Keiji},
+  title = {The ONIOM method and its applications},
   year = {2015},
   pages = {5678--5796}
 }
@@ -52,6 +57,7 @@
   number = {1},
   journal = {Chemical Reviews},
   author = {Gordon, Mark S. and Fedorov, Dmitri G. and Pruitt, Spencer R. and Slipchenko, Lyudmila V.},
+  title = {Fragmentation methods: a route to accurate calculations on large systems},
   year = {2012},
   pages = {632--672}
 }
@@ -61,6 +67,7 @@
   number = {1},
   journal = {Journal of Chemical Information and Computer Sciences},
   author = {Dyall, Kenneth G.},
+  title = {Formal analysis of effective core potential methods},
   year = {2001},
   pages = {30--37}
 }
@@ -69,6 +76,7 @@
   volume = {234},
   journal = {Journal of Molecular Structure: THEOCHEM},
   author = {Huzinaga, S.},
+  title = {Effective Hamiltonian method for molecules},
   year = {1991},
   pages = {51--73}
 }
@@ -77,7 +85,8 @@
   volume = {70},
   number = {2},
   journal = {Canadian Journal of Chemistry},
-  author = {Katsuki, Shinichi},
+  author = {Katsuki, S., Shinichi},
+  title = {Molecular orbital calculation using spectral representation technique},
   year = {1992},
   pages = {285--289}
 }
@@ -88,6 +97,7 @@
   number = {5},
   journal = {International Journal of Quantum Chemistry},
   author = {H{\"o}ujer, Germund and Chung, Johnson},
+  title = {Some aspects of the model potential method},
   year = {1978},
   pages = {623--634}
 }
@@ -98,6 +108,7 @@
   number = {3},
   journal = {International Journal of Quantum Chemistry},
   author = {Carissan, Yannick and Bessac, Fabienne and Alary, Fabienne and Heully, Jean-Louis and Poteau, Romuald},
+  title = {What can we do with an effective group potential?},
   year = {2006},
   keywords = {bulky ligands,effective group potentials,magnetic properties,modelization,organometallic complexes},
   pages = {727--733}
@@ -125,6 +136,7 @@
   number = {9982},
   journal = {Journal of Chemical Physics},
   author = {Perdew, J.P. and Ernzerhof, M. and Burke, K.},
+  title = {Rationale for mixing exact exchange with density functional approximations},
   year = {1996},
   groups = {biblio\_pseudo\_alex}
 }
@@ -135,6 +147,7 @@
   number = {3865},
   journal = {Physical Review letters},
   author = {Perdew, J.P. and Burke, K. and Ernzerhof, M.},
+  title = {Generalized gradient approximation made simple},
   year = {1996},
   groups = {biblio\_pseudo\_alex}
 }
@@ -145,6 +158,7 @@
   number = {146401},
   journal = {Physical Review letters},
   author = {Tao, J. and Perdew, J.P. and Staroverov, V.N. and Scuseria, G.E},
+  title = {Climbing the density functional ladder: Nonempirical meta–generalized gradient approximation designed for molecules and solids},
   year = {2003},
   groups = {biblio\_pseudo\_alex}
 }
@@ -155,6 +169,7 @@
   number = {12129},
   journal = {Journal of Chemical Physics},
   author = {Staroverov, V.N. and Scuseria, G.E and Tao, J. and Perdew, J.P.},
+  title = {Comparative assessment of a new nonempirical density functional: Molecules and hydrogen-bonded complexes},
   year = {2003},
   groups = {biblio\_pseudo\_alex}
 }
@@ -164,6 +179,7 @@
  number = {3578},
  journal = {Journal of Chemical Theory and Computation},
  author = {M. J. G. Peach and M. J. Williamson and D. J. Tozer},
+ title = {Influence of Triplet Instabilities in TDDFT},
  year = {2011},
  groups = {biblio\_pseudo\_alex}
 }
@@ -174,6 +190,7 @@
  number = {36},
  journal = {Physical Review},
  author = {Slater, J. C.},
+ title = {Atomic shielding constants},
  year = {1930},
  groups = {biblio\_pseudo\_alex}
 }
@@ -192,15 +209,16 @@
  number = {2571},
  journal = {Journal of Chemical Physics},
  author = {Sch{\"a}fer, A. and Horn, H. and Ahlrichs, R.},
+ title = {Fully optimized contracted Gaussian basis sets for atoms Li to Kr},
  year = {1992},
  groups = {biblio\_pseudo\_alex}
 }
 
 @misc{scipy,
   language = {en},
-  author =    {Eric Jones and Travis Oliphant and Pearu Peterson},
-  title =     {SciPy: Open source scientific tools for Python},
-  year =      {2001},
+  author = {Eric Jones and Travis Oliphant and Pearu Peterson},
+  title = {SciPy: Open source scientific tools for Python},
+  year = {2001},
   url = {http://www.scipy.org/},
   groups = {biblio\_pseudo\_alex}
 }
@@ -210,6 +228,7 @@
   number = {1},
   journal = {The Journal of Chemical Physics},
   author = {Nicolas, G. and Durand, Ph},
+  title = {A new general methodology for deriving effective Hamiltonians for atoms and molecules. Application to the transferability of atomic potentials in the hydrocarbon series},
   year = {1980},
   pages = {453--463}
 }
@@ -219,7 +238,8 @@
   language = {en},
   number = {1},
   journal = {The Journal of Chemical Physics},
-  author = {Katsuki, Shinichi},
+  author = {Katsuki, S.},
+  title = {The spectral representation technique for an active‐electron‐only molecular orbital calculation applied to the case of nonspherical frozen charge},
   year = {1993},
   pages = {496--501}
 }
@@ -231,6 +251,7 @@
   number = {3-4},
   journal = {Theoretical Chemistry Accounts},
   author = {Raynaud, Christophe and {del Rosal}, Iker and Jolibois, Franck and Maron, Laurent and Poteau, Romuald},
+  title = {Multicentered effective group potentials: ligand-field effects in organometallic clusters and dynamical study of chemical reactivity},
   year = {2010},
   pages = {151--163}
 }
@@ -240,6 +261,7 @@
   number = {15},
   journal = {Journal of chemical physics},
   author = {Hernandez, Norge Cruz and Sanz, Javier Fdez},
+  title = {Ab initio group model potentials including electron correlation effects},
   year = {2000},
   pages = {6082--6087}
 }
@@ -249,6 +271,7 @@
   number = {2},
   journal = {Journal of chemical physics},
   author = {Romero, Jose Antonio Mejias and Sanz, Javier Fernandez},
+  title = {Ab initio group model potentials: Application to the study of intermolecular interactions},
   year = {1993},
   pages = {1255--1261}
 }
@@ -258,6 +281,7 @@
   number = {1},
   journal = {Journal of chemical physics},
   author = {Mejias, J. A. and Sanz, Javier Fernandez},
+  title = {Compact model potentials for ab initio embedded cluster calculations. Part I. Basic formulation},
   year = {1994},
   pages = {327--336}
 }
@@ -268,6 +292,7 @@
   number = {1},
   journal = {Chemical Reviews},
   author = {Gordon, Mark S. and Fedorov, Dmitri G. and Pruitt, Spencer R. and Slipchenko, Lyudmila V.},
+  title = {Fragmentation methods: a route to accurate calculations on large systems},
   year = {2012},
   pages = {632--672}
 }
@@ -277,6 +302,7 @@
   number = {7},
   journal = {PLoS ONE},
   author = {Steinmann, Casper and Fedorov, Dmitri G. and Jensen, Jan H.},
+  title = {The effective fragment molecular orbital method for fragments connected by covalent bonds},
   year = {2012},
   pmid = {22844433},
   pmcid = {PMC3402534}
@@ -288,6 +314,7 @@
   number = {2},
   journal = {The Journal of Physical Chemistry A},
   author = {Gordon, Mark S. and Freitag, Mark A. and Bandyopadhyay, Pradipta and Jensen, Jan H. and Kairys, Visvaldas and Stevens, Walter J.},
+  title = {The effective fragment potential method: A QM-based MM approach to modeling environmental effects in chemistry},
   year = {2001},
   pages = {293--307}
 }
